--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,16 @@ dependencies:
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
- 
+  image_picker: ^1.0.7
   intl: ^0.18.0
   lottie: ^3.0.0
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
-  build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
